ADD: favicon files

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta property="og:description" content="I build React frontends that ship — especially migrations & billing." />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
+  <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
